--- a/Ansible/playbook.yml
+++ b/Ansible/playbook.yml
@@ -1,8 +1,9 @@
 ---
-- hosts: aws
+- hosts: group_A, group_B
   become: yes
   gather_facts: no
-
+  vars_files:
+    - ./host_vars/db_and_web_server1.yml
   tasks:
     - name: Install dependencies
       yum: name={{ item }} state=installed
@@ -10,37 +11,9 @@
         - MySQL-python
         - python-pip
 
-    - name: Install mySQL database
-      yum: name={{ item }} state=installed
-      with_items:
-         - mariadb-server
-         - mariadb-libs
-         - mariadb
-    - name: Start mySQL Service
-      service:
-        name: mariadb
-        state: started
-        enabled: yes
-
-    - name: Create Application Database
-      mysql_db: name=shop state=present
-
-    - name: Create Database ansible_user
-      mysql_user:
-        name: tjp135
-        password: '12345'
-        priv: '*.*:ALL'
-        state: present
-        host: '%'
-
-    - name: Install Python Flask dependency
-      pip:
-         name: "{{item}}"
-      with_items:
-          - flask
-          - flask-mysql
-    - name: copy source code
-      copy: src=app.py dest=/home/ec2-user
-
-    - name: start web server
-      shell: FLASK_APP=app.py nohup flask run --host=0.0.0.0 &
+    - include: tasks/deploy_db.yml
+      when: "'group_A' in group_names"
+    - include: tasks/deploy_web.yml
+      when: "'group_A' in  group_names"
+    - include: tasks/install_deploy_jenkins.yml
+      when: "'group_B' in group_names"
